--- a/src/app/devloper/devloper.component.html
+++ b/src/app/devloper/devloper.component.html
@@ -23,7 +23,7 @@
                   <input type="text" value="Devloper" class="form-control"  placeholder=" Devloper" formControlName="pwd" readonly>
                 </div>
                  <div class="footer">
-                    <button class="btn btn-primary" (click)="submit()" [disabled]="Dlogin.invalid">Login</button>
+                    <button class="btn btn-primary" (click)="Login()" [disabled]="Dlogin.invalid">Login</button>
                 </div>
     </form>            
 </div>
