--- a/src/app/Devloper-/dev-viewtask/dev-viewtask.component.html
+++ b/src/app/Devloper-/dev-viewtask/dev-viewtask.component.html
@@ -11,7 +11,7 @@
       </tr>
     </thead>
     <tbody>
-     <tr *ngFor=" let v of viewtask ;let i=index">
+     <tr *ngFor=" let v of viewTask ;let i=index">
         <td>{{i+1}}</td>
         <td>{{v.project}}</td>
         <td>{{v.task}}</td>
@@ -25,6 +25,7 @@
      </tr>
     </tbody>
   </table>
+
 
 
 
