--- a/src/app/team-leader/Team-Leader/tl-addtask/tl-addtask.component.html
+++ b/src/app/team-leader/Team-Leader/tl-addtask/tl-addtask.component.html
@@ -1,16 +1,18 @@
 <form [formGroup]="Addtask" (ngSubmit)="submit()">
     <div class="card">
-        <div class="header">Add Project</div>
+        <div class="header">Add Task</div>
             <div class="card-body">
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Project Name</label>
-                    <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Project Name" formControlName="project"> 
+                    <select class="form-select" aria-label="Default select example" formControlName="project" (change)="isGetModule($event)">
+                        <option *ngFor="let p of viewprojects" value="{{p.project}}">{{p.project}}</option>                      
+                      </select>
                   </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Module</label>
                     <select class="form-select" aria-label="Default select example" formControlName="module">
-                        <option selected>--select--</option>
-                      >
+                        <option *ngFor="let m of viewmodules" value="{{m.module}}">{{m.module}}</option> 
+                      
                       </select> 
                 </div>
                 <div class="mb-3">
