--- a/src/app/team-leader/Team-Leader/tl-view-modules/tl-view-modules.component.html
+++ b/src/app/team-leader/Team-Leader/tl-view-modules/tl-view-modules.component.html
@@ -1,1 +1,33 @@
-<p>tl-view-modules works!</p>
+<table class="table">
+    <thead>
+      <tr>
+       <th>S.NO.</th>
+       <th>Project Name</th>
+       <th>Module</th>
+       <th>Developer</th>
+       <th>Date</th>
+       <th>Status</th>
+       <th>Actions</th> 
+      </tr>
+    </thead>
+    <tbody>
+     <tr *ngFor=" let v of viewModules ;let i=index">
+        <td>{{i+1}}</td>
+        <td>{{v.project}}</td>
+        <td>{{v.module}}</td>
+        <td>{{v.teamleader}}</td>
+        <td>{{v.date}}</td>
+        <td>{{v.status}}</td>
+        <td>
+            <button class="btn btn-primary">Download</button>
+           
+        </td>
+     </tr>
+    </tbody>
+  </table>
+
+
+
+
+
+
