--- a/src/app/Project-manager/pm-view-project/pm-view-project.component.html
+++ b/src/app/Project-manager/pm-view-project/pm-view-project.component.html
@@ -21,9 +21,53 @@
         <td>{{v.status}}</td>
         <td>{{v.date}}</td>
         <td>
-            <button class="btn btn-primary">Edit</button>
-            <button class="btn btn-danger">Delete</button>
+            <button class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="edit(v)">Edit</button>
+          
         </td>
      </tr>
     </tbody>
   </table>
+
+
+  <!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Update Project</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="updateProject" (ngSubmit)="update()" >
+
+                  <div class="card-body">
+                      <div class="mb-3">
+                          <label for="exampleInputEmail1" class="form-label">Project Name</label>
+                          <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Project Name" formControlName="project" readonly> 
+                        </div>
+                      <div class="mb-3">
+                          <label for="exampleInputEmail1" class="form-label">Status</label>
+                          <select class="form-select" formControlName="status">
+                              <option selected>--select--</option>
+                              <option value="New Module">New Module</option>
+                              <option value="Task Started">Task Started</option>
+                              <option value="25% Completed">25% Completed</option>
+                              <option value="50% Completed">50% Completed</option>
+                              <option value="75% Completed">75% Completed</option>
+                              <option value="90% Completed">90% Completed</option>
+                              <option value="100% Completed">100% Completed</option>
+                            </select> 
+                      </div>
+            </div>          
+            <div class="modal-footer">
+              <button type="submit" class="btn btn-primary" data-bs-dismiss="modal" >Update</button>
+            </div>      
+         </form>
+      </div>
+      
+    </div>
+  </div>
+</div>
