--- a/src/app/admin/view-projects/view-projects.component.html
+++ b/src/app/admin/view-projects/view-projects.component.html
@@ -21,8 +21,8 @@
         <td>{{v.status}}</td>
         <td>{{v.date}}</td>
         <td>
-            <button class="btn btn-primary">Edit</button>
-            <button class="btn btn-danger">Delete</button>
+       
+            <button class="btn btn-primary">Download</button>
         </td>
      </tr>
     </tbody>
